# idolhub-bot

./: .gitignore  AUDIT_FINDINGS.md  PHASE1_COMPLETION.md  README.md  config.example.json  hasilaudit.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
api/: server.py
api/routes/: chat.py  config.py  health.py
core/: agent.py  bot.py  config.py  config_reloader.py  config_schema.py  config_validator.py  event_bus.py  llm.py  rag_filter.py
dashboard/: README.md
docs/: AGENT_GUIDE.md  BASELINE.md  CONFIG.md  CONTRIBUTING.md  DEPENDENCIES.md  EXECUTION_PROTOCOL.md  NEXT_PHASE.md
docs/specs/: 2026-06-07-baseline-foundation-hardening.md  HARDENING_IMPLEMENTATION_WORKFLOW.md  README.md  phase1-config-validation-design.md  phase2-secrets-management-design.md
docs/superpowers/: README.md
docs/superpowers/plans/: 2026-06-06-fortress-additions.md  2026-06-06-memory-integration.md  2026-06-06-mrktt-memory-additions.md  2026-06-07-database-auto-pruning.md  2026-06-07-documentation-baseline.md  2026-06-07-fts5-context-threading.md  2026-06-07-sqlite-vector-memory.md
docs/superpowers/specs/: 2026-06-06-async-pocketflow-agent-design.md  2026-06-06-entrypoint-systemd-design.md  2026-06-06-idolhub-design.md  2026-06-07-database-auto-pruning-design.md  2026-06-07-documentation-baseline-design.md  2026-06-07-fts5-context-threading-design.md  2026-06-07-sqlite-vector-memory-design.md
mcp_server/: __init__.py  server.py
memory/: memory_gate.py  sqlite_store.py
plugins/: loader.py
scripts/: FIX_TESTS_GUIDE.md  README_AUDIT.md  fix_all_inline_configs.py  fix_all_test_configs.sh  fix_test_fixtures.py  install_audit_tools.sh  run_audit.sh  setup.sh
skills/: loader.py
systemd/: idolhub-api.service.template  idolhub-mcp.service.template  idolhub.env.template  idolhub.service.template
tests/: conftest.py  test_agent.py  test_api.py  test_api_server.py  test_config.py  test_config_reloader.py  test_config_schema.py  test_config_validator.py  test_llm.py  test_main.py  test_mcp.py  test_memory.py  test_rag_filter.py  test_sandbox.py  test_search.py  test_skills_plugins.py
tools/: heartbeat.py  registry.py  sandbox.py
