[project]
name = "idolhub"
version = "0.1.0"
description = "PocketFlow personal assistant — Telegram + API + MCP, plugin-first"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core framework — 100 lines, zero bloat
    "pocketflow>=0.0.1",
    # Telegram — async bot handler
    "python-telegram-bot>=21.0",
    # LLM — OpenAI-compatible SDK (slim)
    "openai>=1.0.0",
    # HTTP client — used by providers & tools
    "httpx>=0.27.0",
    # API server — plain, no extras
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    # MCP protocol — official SDK
    "mcp>=1.0.0",
    # Memory — lightweight async SQLite
    "aiosqlite>=0.20.0",
    # Data validation — minimal usage
    "pydantic>=2.0.0",
    # Skill frontmatter parser
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Optional semantic memory extension
vector = [
    "sqlite-vec>=0.1.0",
]
# Web search tool (optional — bisa pakai httpx langsung ke DDG JSON API)
search = [
    "duckduckgo-search>=6.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "api", "mcp_server", "memory", "plugins", "providers", "tools", "skills"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
